[tool.poetry]
name = "tui-test"
version = "0.1.0"
description = ""
authors = ["Zachary Westerman <westerman.zachary@gmail.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^3.1.1"
textual-serve = "^1.1.2"
timeago = "^1.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"